# btcwalletchecker

./: .gitignore  CMakeLists.txt  README.md
include/hiredis/: hiredis-test  hiredis.pc
src/: main.cpp
